hearty fix